apps/shiplog/tests/render_md/snapshots/render_md__format_stability__packet_multiple_workstreams.snap
---
source: apps/shiplog/tests/render_md/format_stability.rs
expression: result
---
# Summary

**Window:** 2025-Q1

**Workstreams:** 2

**Events:** 4 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** GitHub

## Executive Summary

- **Widgets Core** — 2 PRs, 0 reviews, 0 manual events
- **Infrastructure** — 2 PRs, 0 reviews, 0 manual events

## Workstreams

### Widgets Core

Widget improvements

**Evidence anchors**

- [PR] Add widget caching (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/10)
- [PR] Fix widget rendering (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/11)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 2, Reviews: 0, Manual: 0_

### Infrastructure

CI/CD and observability

**Evidence anchors**

- [PR] Setup CI pipeline (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/5)
- [PR] Add monitoring dashboards (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/6)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 2, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Widgets Core

- [PR] Add widget caching (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/10)
- [PR] Fix widget rendering (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/11)

### Workstream: Infrastructure

- [PR] Setup CI pipeline (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/5)
- [PR] Add monitoring dashboards (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/6)

## Coverage and Limits

Included:
- GitHub: 4 events
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2025-01-01 to 2025-04-01
- **Mode:** merged
- **Sources:** GitHub
- **Completeness:** Complete

## Appendix: All Receipts

### Widgets Core

- [PR] Add widget caching (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/10)
- [PR] Fix widget rendering (2025-06-01) — [acme/widgets](https://github.com/acme/widgets/pull/11)

### Infrastructure

- [PR] Setup CI pipeline (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/5)
- [PR] Add monitoring dashboards (2025-06-01) — [acme/infra](https://github.com/acme/infra/pull/6)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
